	so we don't need a special case for GObject in the code generator.

	* tools/apiGen/glib-sources.xml: make this into glib not gobject.

	* tools/apiGen/gobject-sources.xml: add gobject seperately.

	* demo/concurrent/Progress.hs: Fix progress demo to use the right
	idle priority. This is a knock-on change from fixing the priority
	constants in gtk/Graphics/UI/Gtk/General/Structs.hsc.

2005-03-24 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Scrolling/HScrollbar.chs,
	gtk/Graphics/UI/Gtk/Scrolling/ScrolledWindow.chs,
	gtk/Graphics/UI/Gtk/Scrolling/VScrollbar.chs: documentation changes
	and code formatting changes.

	* gtk/Graphics/UI/Gtk/Ornaments/Frame.chs,
	gtk/Graphics/UI/Gtk/Ornaments/HSeparator.chs,
	gtk/Graphics/UI/Gtk/Ornaments/VSeparator.chs: documentation changes
	and code formatting changes.

	* gtk/Graphics/UI/Gtk/Layout/Alignment.chs.pp,
	gtk/Graphics/UI/Gtk/Layout/AspectFrame.chs,
	gtk/Graphics/UI/Gtk/Layout/Expander.chs.pp,
	gtk/Graphics/UI/Gtk/Layout/Fixed.chs,
	gtk/Graphics/UI/Gtk/Layout/HBox.chs,
	gtk/Graphics/UI/Gtk/Layout/HButtonBox.chs,
	gtk/Graphics/UI/Gtk/Layout/HPaned.chs,
	gtk/Graphics/UI/Gtk/Layout/Layout.chs,
	gtk/Graphics/UI/Gtk/Layout/Notebook.chs.pp,
	gtk/Graphics/UI/Gtk/Layout/Table.chs,
	gtk/Graphics/UI/Gtk/Layout/VBox.chs,
	gtk/Graphics/UI/Gtk/Layout/VButtonBox.chs,
	gtk/Graphics/UI/Gtk/Layout/VPaned.chs: documentation changes and code
	formatting changes.

2005-03-23 Duncan Coutts <duncan@coutts.uklinux.net>

	* glib/glib.cabal.in, gtk/gtk.cabal.in, mogul/mogul.cabal.in,
	glade/glade.cabal.in, sourceview/sourceview.cabal.in,
	gconf/gconf.cabal.in, mozembed/mozembed.cabal.in: add new cabal
	package file templates.

	* configure.ac: bump version to make it clear we're in a development
	mode (we can no longer use _pre since cabal does not like that as a
	version number). Add test for cabal support (ghc >= 6.4). Add
	*.cabal.in files to the list of files that need substitution in
	AC_OUTPUT.
